# wallet-rs

./: .codecov.yml  .gitignore  .release-please-manifest.json  .swiftlint.yml  Cargo.toml  Makefile  README.md  build.gradle  codecov.yml  deny.toml  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  rome.json  rust-toolchain.toml  tsconfig.json  turbo.json
.cargo/: config.toml
.github/: CODEOWNERS
.github/actions/brew-install/: action.yml
.github/actions/java-install/: action.yml
.github/actions/k8s-install/: action.yml
.github/actions/node-install/: action.yml
.github/actions/pr-validate/: action.yml
.github/actions/rust-finish/: action.yml
.github/actions/rust-install/: action.yml
.github/actions/turbo-trigger/: action.yml
.github/workflows/: android.yml  approve.yml  context.yml  env.yml  gradle.yml  ios.yml  nix.yml  node.yml  pr.yml  release.yml  rust.yml
android/: build.gradle  package.json
android/src/main/: AndroidManifest.xml
android/src/main/java/android/WalletCore/: FirstFragment.kt  MainActivity.kt  SecondFragment.kt
android/src/main/res/layout/: activity_main.xml
android/src/main/res/menu/: menu_main.xml
android/src/main/res/navigation/: nav_graph.xml
android/src/main/res/values/: strings.xml  themes.xml
android/src/main/res/values-night/: themes.xml
apps/expo/: babel.config.js  index.js  package.json  tamagui.config.ts
apps/expo/app/: _layout.tsx  index.tsx
apps/tauri/: package.json
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
crates/: package.json  turbo.json
crates/core/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  uniffi.toml
crates/core/src/: WalletCore.swift  WalletCore.udl  WalletCoreFFI.h  WalletCoreFFI.modulemap  lib.rs
crates/keychain/: Cargo.toml  README.md  build.rs  uniffi.toml
crates/keychain/ios/KeychainPlatformSupport/: KeychainPlatformSupport.h  KeychainPlatformSupport.swift
crates/keychain/ios/KeychainPlatformSupport.xcodeproj/: project.pbxproj
crates/keychain/ios/KeychainPlatformSupport.xcodeproj/xcshareddata/xcschemes/: KeychainPlatformSupport.xcscheme  KeychainPlatformSupportApp.xcscheme
crates/keychain/ios/KeychainPlatformSupport/Bridge/: Keychain.swift
crates/keychain/ios/KeychainPlatformSupport/KeychainPlatformSupport.docc/: KeychainPlatformSupport.md
crates/keychain/ios/KeychainPlatformSupportApp/: AppDelegate.swift  ContentView.swift  KeychainPlatformSupportApp.h  KeychainPlatformSupportApp.swift
crates/keychain/ios/KeychainPlatformSupportTests/: KeychainPlatformSupportTests.swift
crates/keychain/src/: Keychain.udl  in_memory.rs  ios.rs  lib.rs  macos.rs
crates/metamask/: CHANGELOG.md  Cargo.toml  README.md
crates/metamask/src/: interactive.rs  lib.rs  password.rs  regex.rs  types.rs  vault.rs
crates/metamask/tests/: interactive.rs  main.rs  vault.rs
crates/signer/: .gitignore  Cargo.toml  Makefile  README.md  WalletRsSigner.podspec  package.json
crates/signer/ios/: libwallet_signer_ffi.h
crates/signer/src/: lib.rs
gradle/wrapper/: gradle-wrapper.properties
ios/: .gitignore  package.json  turbo.json
ios/Testplans/: WalletCoreTests.xctestplan
ios/WalletCore/: ContentView.swift  WalletCoreApp.swift
ios/WalletCore.xcodeproj/: project.pbxproj
ios/WalletCore.xcodeproj/xcshareddata/xcschemes/: WalletCore.xcscheme  WalletCoreTests.xcscheme
ios/WalletCore.xcworkspace/: contents.xcworkspacedata
ios/WalletCoreSource/: Package.swift  README.md
ios/WalletCoreSource/Sources/WalletCoreSource/: WalletCoreSource.swift
ios/WalletCoreSource/Tests/WalletCoreSourceTests/: WalletCoreSourceTests.swift
ios/WalletCoreTests/: WalletCoreTests.swift
ios/WalletCoreUITests/: WalletCoreUITests.swift  WalletCoreUITestsLaunchTests.swift
ios/fastlane/: .gitignore  Fastfile  README.md
ios/wallet-rs/: ContentView.swift  WalletRsApp.swift
ios/wallet-rs.xcodeproj/: project.pbxproj
tools/embedded-cbindgen/: Cargo.toml
tools/embedded-cbindgen/src/: main.rs
tools/embedded-uniffi-bindgen/: Cargo.toml
tools/mpl-license-checker/: Cargo.toml
tools/mpl-license-checker/src/: main.rs
