[workspace]
resolver = "2"

members = [
  "bin/cli",
  "crates/core",
  "crates/keychain",
  "crates/metamask",
  "tools/embedded-uniffi-bindgen",
  "tools/mpl-license-checker",
]

default-members = ["bin/cli"]

[profile.dev.build-override]
opt-level = 3

[profile.release]
lto = "off"

[workspace.dependencies]
anyhow = "1.0.69"
clap = "4.2.2"
ethers-core = "2.0.2"
ethers-signers = "2.0.2"
eyre = "0.6.8"
itertools = "0.10.0"
lazy_static = "1.4.0"
mockall = "0.11.4"
rand = "0.8.4"
regex = "1.7.1"
serde = "1.0.153"
serde_json = "1.0.94"
serial_test = "2.0.0"
thiserror = "1.0.39"
tokio = "1.27"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-test = "0.2.4"
uniffi = "0.23.0"
uniffi_build = "0.23.0"
uniffi_macros = "0.23.0"
wallet-keychain = { version = "0.1.0", path = "crates/keychain", default-features = false }
wallet-metamask = { version = "0.3.0", path = "crates/metamask", default-features = false }
