[workspace]
resolver = "2"

members = [
  "apps/tauri/src-tauri",
  "bin/cli",
  "crates/core",
  "crates/metamask",
  "crates/signer",
  "tools/embedded-cbindgen",
  "tools/embedded-uniffi-bindgen",
  "tools/mpl-license-checker",
]

default-members = ["bin/cli"]

# Ref: https://www.uffizzi.com/blog/optimizing-rust-builds-for-faster-github-actions-pipelines

[profile.dev]
opt-level = 0
codegen-units = 16

[profile.release]
lto = true
opt-level = 2
codegen-units = 16

[workspace.dependencies]
anyhow = "1.0.69"
clap = "4.2.2"
ethers-core = "2.0.2"
ethers-signers = "2.0.2"
eyre = "0.6.8"
itertools = "0.11.0"
lazy_static = "1.4.0"
mockall = "0.11.4"
rand = "0.8.4"
regex = "1.7.1"
serde = "1.0.153"
serde_json = "1.0.94"
serial_test = "2.0.0"
thiserror = "1.0.39"
tokio = "1.27"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-test = "0.2.4"
uniffi = "0.23.0"
uniffi_build = "0.23.0"
uniffi_macros = "0.23.0"
wallet-metamask = { version = "0.3.0", path = "crates/metamask", default-features = false }
wallet-signer = { version = "0.1.0", path = "crates/signer", default-features = false }
