[package]
name = "wallet-rs"
description = "A complete wallet rust library"
version = "0.1.0"
edition = "2021"

authors = ["Shun Kakinoki"]
license = "MPL-2.0"
repository = "https://github.com/wallet-rs/wallet-rs"

[lib]
name = "wallet_core"
crate-type = ["staticlib", "cdylib"]

[dependencies]
uniffi = { workspace = true }
uniffi_macros = { workspace = true }

[build-dependencies]
uniffi_build = { workspace = true, features = ["builtin-bindgen"] }
