[package]
name = "wallet-rs"
description = "A complete wallet rust library"
version = "0.5.0"
edition = "2021"

authors = ["Shun Kakinoki"]
license = "MPL-2.0"
repository = "https://github.com/wallet-rs/wallet-rs"
readme = "README.md"

[lib]
name = "wallet_core"
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
eyre = { workspace = true }
uniffi = { workspace = true }
uniffi_macros = { workspace = true }
wallet-signer = { workspace = true }

[build-dependencies]
uniffi_build = { workspace = true, features = ["builtin-bindgen"] }
