[package]
name = "wallet-keychain"
description = "Keychain utilities for wallet-rs"
version = "0.1.0"
edition = "2021"

authors = ["Shun Kakinoki"]
license = "MPL-2.0"
repository = "https://github.com/wallet-rs/wallet-rs"
readme = "README.md"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
once_cell = { version = "1.17.1" }
thiserror = { workspace = true }
uniffi = { workspace = true }
uniffi_macros = { workspace = true }

[target.'cfg(target_os = "ios")'.dependencies]
security-framework = "2.6.1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.6.1"

[build-dependencies]
uniffi_build = { workspace = true, features = ["builtin-bindgen"] }
