[package]
name = "wallet-metamask"
version = "0.1.0"
edition = "2021"

license = "MPL-2.0"

[lib]
name = "wallet_metamask"

[dependencies]
anyhow = { workspace = true }
base64 = "0.21.0"
rand = "0.8.5"
regex = "1.7.3"
ring = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
