[package]
name = "wallet-metamask"
description = "Metamask vaults, cryptography and utilities"
version = "0.3.0"
edition = "2021"

authors = ["Shun Kakinoki"]
license = "MPL-2.0"
repository = "https://github.com/wallet-rs/wallet-rs"
readme = "README.md"

[dependencies]
aes-gcm = "0.10.1"
anyhow = { workspace = true }
base64 = "0.21.0"
inquire = "0.6.1"
itertools = { workspace = true }
lazy_static = { workspace = true }
mockall = { workspace = true }
os_info = "3.7.0"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8.5"
regex = "1.7.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10.6"
tracing = { workspace = true }
tracing-test = { workspace = true, features = ["no-env-filter"] }
whoami = "1.4.0"
